// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tsconfigProjectGenerator with Node 18 preset tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "declaration": true,
    "types": [
      "node",
    ],
  },
  "exclude": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": [
    "**/*.ts",
  ],
}
`;

exports[`tsconfigProjectGenerator with Node 18 preset tsconfig.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "lib": [
      "es2022",
    ],
    "module": "nodenext",
    "outDir": "../../dist/out-tsc",
    "target": "es2022",
  },
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`tsconfigProjectGenerator with Node 18 preset tsconfig.spec.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "types": [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;

exports[`tsconfigProjectGenerator without any options tsconfig.app.json or tsconfig.lib.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "declaration": true,
  },
  "exclude": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "test",
  ],
  "extends": "./tsconfig.json",
  "include": [
    "**/*.ts",
  ],
}
`;

exports[`tsconfigProjectGenerator without any options tsconfig.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "outDir": "../../dist/out-tsc",
  },
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json",
    },
    {
      "path": "./tsconfig.spec.json",
    },
  ],
}
`;

exports[`tsconfigProjectGenerator without any options tsconfig.spec.json matches snapshot 1`] = `
{
  "compilerOptions": {
    "types": [
      "jest",
      "node",
    ],
  },
  "extends": "./tsconfig.json",
  "include": [
    "jest.config.ts",
    "**/*.spec.ts",
    "**/*.test.ts",
    "**/*.d.ts",
    "test",
  ],
}
`;
